syntax = "proto3";

option csharp_namespace = "BlazorApp1.Shared.Protos";
package ReadT1KaryawanPackage;

service svpT1Karyawan{
	rpc GetAllT1Karyawan (GetAllT1KaryawanRequest) returns (GetAllT1KaryawanReply);
	rpc GetT1KaryawanById (GetT1KaryawanByIdRequest) returns (proT1Karyawan);
	rpc GetAllT1KaryawanStreaming (GetAllT1KaryawanRequest) returns (stream GetAllT1KaryawanReply);
	rpc InsertT1Karyawan (InsertT1KaryawanRequest) returns (WriteKaryawanReply);
	rpc UpdateT1Karyawan (proT1Karyawan) returns (WriteKaryawanReply);
	rpc DeleteT1Karyawan (DeleteT1KaryawanRequest) returns (WriteKaryawanReply);
}

message GetAllT1KaryawanRequest{

}

message GetT1KaryawanByIdRequest{
	string IdKaryawan = 1;
}

message GetAllT1KaryawanReply{
	repeated proT1Karyawan DaftarT1Karyawan= 1;
}

message proT1Karyawan{
	string IdKaryawan = 1;
	string IdJabatan = 2;
	string IdDivisiPerusahaan = 3;
	string NamaLengkap = 4;
	string NamaPanggilan = 5;
	string Alamat = 6;

}

message InsertT1KaryawanRequest{
	string IdJabatan = 1;
	string IdDivisiPerusahaan = 2;
	string NamaLengkap = 3;
	string NamaPanggilan = 4;
	string Alamat = 5;
}

message DeleteT1KaryawanRequest{
	string IdKaryawan = 1;
}

message WriteKaryawanReply{
	bool IsOk = 1;
	string Hasil = 2;
}